use flexbox to (mostly) fix weird gaps in rows

--- a/style.css
+++ b/style.css
@@ -3,12 +3,20 @@
     background-color: cyan;
 }
 #grid-container {
+    display: flex;
+    flex: 1 0 auto;
+    flex-direction: column;
     line-height: 0px;
     width: 250px;
     height: 250px;
     background-color: yellow;
 }
+.gridRow {
+    display: flex;
+    flex: 1 0 auto;
+}
 .gridDiv {
+    flex: 1 0 auto;
     line-height: 0px;
     display: inline-block;
     background-color: pink;
